# fount

./: .gitignore  CLAUDE.md  MAGIC-ROUTES.md  Nineum.md  README.md
public/: allyabase-tauri.js  allyabase-web.js  app-shoppe-logic.js  bn-button-container.css  bn-button-container.js  castSpell-demo.html  castSpell.js  fn-form-component.css  fn-form-component.js  hn-header-or-footer.js  pn-post-component.css  pn-post-component.js  vs-vertical-stack.js  ye-olde-appe-shoppe.html
public/nexus/: index.html  shopping.html
public/nexus/css/: nexus.css  shopping.css
public/nexus/js/: main.js  shopping.js
public/nexus/js/shared/: api-client.js
src/client/javascript/: README.md  fount.cjs  fount.js  package-lock.json  package.json
src/client/python/: main.py  planet_nine.py
src/client/python/src/: .user.py.swp  grant.py  magic.py  transfer.py  user.py
src/client/python/src/network/: network.py
src/client/rust/fount-rs/: Cargo.toml
src/client/rust/fount-rs/src/: .lib.rs.swp  lib.rs  structs.rs  tests.rs
src/server/node/: .fount.js.swp  fount.js  package-lock.json  package.json  server.js
src/server/node/spellbooks/: .spellbook.js.swp  spellbook.js
src/server/node/src/experience/: experience.js
src/server/node/src/magic/: magic.js
src/wiki/wiki-plugin-fount/: factory.json  fount.js  package-lock.json  package.json
src/wiki/wiki-plugin-fount/client/: fount.js
src/wiki/wiki-plugin-fount/server/: server.js  server.mjs
test/mocha/: client.js  magic-spells.js  package-lock.json  package.json  server.js
test/pytest/: test.py
(+11 files in other folders)
