[package]
name = "fount-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
sessionless = "0.1.1"
# reqwest = { version = "0.12.4", features = ["blocking", "json"] }
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
actix-rt = "*"
once_cell = "*"
